--- a/index.html
+++ b/index.html
@@ -114,15 +114,11 @@
                         </div>
                         <div class="flex justify-between">
                             <span class="text-gray-600">Amount Due:</span>
-                            <span class="font-medium">$XXX.XX</span>
-                        </div>
-                        <div class="flex justify-between">
-                            <span class="text-gray-600">Invoice #:</span>
-                            <span class="font-medium">INV-2023-001</span>
+                            <span class="font-medium">2,000.00</span>
                         </div>
                         <div class="flex justify-between">
                             <span class="text-gray-600">Due Date:</span>
-                            <span class="font-medium">MM/DD/YYYY</span>
+                            <span class="font-medium">14.09.2025</span>
                         </div>
                     </div>
                 </div>
@@ -197,3 +193,4 @@
 
 </body>
 </html>
+
